<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89cff0"
    tools:context=".AddExpenseActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvDailyExpenseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/daily_expense_in_main"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExpenseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/name_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etExpenseName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/expense_name_in_main"
                android:inputType="text"
                android:textColorHint="#37474F"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/amount_tv_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/amount_et_in_main"
                android:inputType="text"
                android:textColorHint="#37474F"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/category_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:focusable="false"
                android:hint="@string/select_date_in_activity"
                android:inputType="date"
                android:textColorHint="#37474F"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/time_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:focusable="false"
                android:hint="@string/select_time_in_activity"
                android:inputType="time"
                android:textColorHint="#37474F"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvTypeOfPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/payment_type_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spPayment"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/notes_in_main"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/note_in_activity"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/submit_in_activity"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnBackToMainMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:onClick="goToMainMenu"
                    android:text="@string/back_to_main_menu_in_activity"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
