<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etExpenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/expense_name_in_dialog"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/amount_in_dialog"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/date_in_dialog"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/time_in_dialog"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

</LinearLayout>